crates/ox_content_link_checker/src/snapshots/ox_content_link_checker__tests__cross_file_anchor_emits_warning_until_followup_lands.snap
---
source: crates/ox_content_link_checker/src/tests.rs
expression: "diagnostic_snapshot(&diagnostics[0], &dir)"
---
kind: FileAnchor
severity: Warning
target: ./other.md#section
message: Cross-file anchor `#section` is not validated yet (file exists, anchor unchecked).
