crates/ox_content_link_checker/src/snapshots/ox_content_link_checker__tests__ignore_patterns_suppress_diagnostics.snap
---
source: crates/ox_content_link_checker/src/tests.rs
expression: "diagnostic_snapshot(&diagnostics[0], Path::new(\"/tmp\"))"
---
kind: File
severity: Error
target: ./other.md
message: Broken link target: `./other.md` does not exist (resolved to $ROOT/./other.md).
