crates/ox_content_link_checker/src/snapshots/ox_content_link_checker__tests__image_target_is_resolved_like_links.snap
---
source: crates/ox_content_link_checker/src/tests.rs
expression: "diagnostic_snapshot(&diagnostics[0], &dir)"
---
kind: File
severity: Error
target: ./missing.png
message: Broken image target: `./missing.png` does not exist (resolved to $ROOT/./missing.png).
