crates/ox_content_link_checker/src/snapshots/ox_content_link_checker__tests__missing_relative_file_is_reported_with_resolved_path.snap
---
source: crates/ox_content_link_checker/src/tests.rs
expression: "diagnostic_snapshot(&diagnostics[0], &dir)"
---
kind: File
severity: Error
target: ./missing.md
message: Broken link target: `./missing.md` does not exist (resolved to $ROOT/./missing.md).
